# image_captioner

./: .gitignore  CLAUDE.md  LICENSE  Open Knowledge Format (OKF) — An Annotated Guide.md  README.md  compass_artifact_wf-2e149159-73b4-4a03-962a-906ccbb751d6_text_markdown.md  eval.toml.example  pipeline.toml.example  pyproject.toml
docs/superpowers/plans/: 2026-07-01-core-pipeline-implementation.md  2026-07-02-model-evaluation-implementation.md
docs/superpowers/specs/: 2026-07-01-core-pipeline-design.md  2026-07-02-model-evaluation-design.md
scripts/: build_llama_server.sh  run_llama_server.sh  smoke_test_vlm.py
src/image_captioner/: __init__.py  caption.py  cli.py  config.py  dedup.py  formats.py  hashing.py  manifest.py  okf.py  publish.py  raw_convert.py  resize.py  slug.py  vlm_client.py
src/image_captioner/evaluation/: config.py  judge.py  report.py  runner.py  server_manager.py
tests/: helpers.py  test_caption.py  test_caption_integration.py  test_cli.py  test_config.py  test_dedup.py  test_end_to_end.py  test_eval_config.py  test_eval_runner.py  test_hashing.py  test_judge.py  test_manifest.py  test_okf.py  test_publish.py  test_raw_convert.py  test_report.py  test_resize.py  test_server_manager.py  test_slug.py  test_vlm_client.py
