[project]
name = "image-captioner"
version = "0.1.0"
description = "Caption, rename, and organize a folder of images using a local VLM"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pillow>=10.0",
    "imagehash>=4.3",
    "rawpy>=0.19",
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.scripts]
image-captioner = "image_captioner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_captioner"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
